correcting errors in auth process and security